fix clear text icon alignment

--- a/styles/base.less
+++ b/styles/base.less
@@ -138,10 +138,10 @@ p {
 	position: absolute;
 	line-height: 1em;
 	color: #888;
+	padding: 0.25em 0.5em 0.25em 0.5em !important;
 }
 
 .right-input-icon {
-	padding: 0.25em 0.5em 0.25em 0.5em;
 	margin-top: 0em;
 	margin-left: -1.5em;
 	z-index: 999;
@@ -281,4 +281,5 @@ strong {
 	bottom: 0;
 	right: 0;
 	margin: 0 0.25em;
+	opacity: 0.5;
 }
